--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +9,7 @@
 
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-utils</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>Lutece Library Utils</name>
 
@@ -42,6 +40,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-utils</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-utils.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-tech-library-utils.git</url>
-        <tag>HEAD</tag>
+        <tag>lutece-tech-library-utils-1.0.0</tag>
     </scm>
 </project>
