--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-utils</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Lutece Library Utils</name>
 
@@ -40,6 +40,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-utils</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-utils.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-tech-library-utils.git</url>
-        <tag>lutece-tech-library-utils-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
